--- a/config/biocypher_config.yaml
+++ b/config/biocypher_config.yaml
@@ -11,3 +11,14 @@ neo4j:
   array_delimiter: "|"
   skip_duplicate_nodes: true
   skip_bad_relationships: true
+
+  # Optional tail ontologies
+  # tail_ontologies:
+  #   so:
+  #     url: test/ontologies/so.owl
+  #     head_join_node: sequence variant
+  #     tail_join_node: sequence_variant
+  #   mondo:
+  #     url: test/ontologies/mondo.owl
+  #     head_join_node: disease
+  #     tail_join_node: disease
