--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "biocypher-project-template"
+name = "wheatomics-biocypher"
 version = "0.5.43"
 description = "Template for creating a BioCypher-driven knowledge graph"
 authors = [
@@ -16,3 +16,6 @@ biocypher = "^0.5.43"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.poetry.scripts]
+my-project = "wheatomics-biocypher.wheatomics_biocypher:run"
